@@ -1,0 +1,16 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="opengever.task">
+
+    <!-- 2 -> 2601 -->
+    <genericsetup:upgradeStep
+        title="Update workflow and object security"
+        description=""
+        source="2"
+        destination="2601"
+        handler="opengever.task.upgrades.to2601.UpdateWorkflow"
+        profile="opengever.task:default"
+        />
+
+</configure>
