@@ -5,6 +5,7 @@ extensions = mr.developer
 auto-checkout =
   ftw.testing
   transmogrify.sqlinserter
+  ftw.upgrade
 
 [branches]
 ftw.datepicker = master
